force-app/main/default/objects/Payment_Import__c/Payment_Import__c.object-meta.xml
<CustomObject>
    <label>Payment Import</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Payment Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>