force-app/main/default/objects/Payment_Import__c/fields/Applied_To_Charge__c.field-meta.xml
<CustomField>
    <fullName>Applied_To_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied To Charge</label>
    <referenceTo>OneCRM__Income__c</referenceTo>
    <relationshipLabel>Payment Imports</relationshipLabel>
    <relationshipName>Payment_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>