force-app/main/default/objects/Payment_Import__c/fields/Created_Payment__c.field-meta.xml
<CustomField>
    <fullName>Created_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Payment</label>
    <referenceTo>OneCRM__Income__c</referenceTo>
    <relationshipLabel>Payment Imports (Created)</relationshipLabel>
    <relationshipName>Payment_Imports_Created</relationshipName>
    <type>Lookup</type>
</CustomField>