force-app/main/default/objects/Payment_Import__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Imports</relationshipLabel>
    <relationshipName>Payment_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>