force-app/main/default/objects/Payment_Import__c/fields/Matched_Contact__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Imports</relationshipLabel>
    <relationshipName>Payment_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>