force-app/main/default/objects/Payment_Import__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paypal</fullName>
                <default>true</default>
                <label>Paypal</label>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Zelle</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>CashApp</fullName>
            </value>
            <value>
                <fullName>In Kind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>